--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -22,5 +22,9 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
+  <connectionStrings>
+    <add name="CS" connectionString="Data Source=DESKTOP-MV8K6JL\SQLEXPRESS;Initial Catalog=SPKSTAT;Integrated Security=True;" />
+  </connectionStrings>
 
 </configuration>
