--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -24,7 +24,7 @@
   </system.codedom>
   
   <connectionStrings>
-    <add name="CS" connectionString="Data Source=DESKTOP-MV8K6JL\SQLEXPRESS;Initial Catalog=SPKSTAT;Integrated Security=True;" />
+    <add name="CS" connectionString="Data Source=LAPTOP-095JGQH5;Initial Catalog=SPKSTAT;Integrated Security=True;" />
   </connectionStrings>
 
 </configuration>
