Added parent and admin interfaces

--- a/NET4Project/SpeakStat/SpeakStat.csproj
+++ b/NET4Project/SpeakStat/SpeakStat.csproj
@@ -1,6 +1,4 @@
 ﻿<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
-  <Import Project="..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -63,11 +61,6 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
-      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Images\BackgroundLanding.jpg" />
     <Content Include="Images\btn1.png" />
     <Content Include="Images\btn2.png" />
@@ -83,8 +76,9 @@
     <Content Include="Images\TEACHER.png" />
     <Content Include="LandingPage.aspx" />
     <Content Include="ProfessorClassPage.aspx" />
+    <Content Include="ParentInterface.aspx" />
     <Content Include="ProfessorInterface.aspx" />
-    <Content Include="StudentClassPage.aspx" />
+    <Content Include="AdminInterface.aspx" />
     <Content Include="StudentInterface.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -103,6 +97,13 @@
     <Compile Include="ProfessorClassPage.aspx.designer.cs">
       <DependentUpon>ProfessorClassPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ParentInterface.aspx.cs">
+      <DependentUpon>ParentInterface.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ParentInterface.aspx.designer.cs">
+      <DependentUpon>ParentInterface.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ProfessorInterface.aspx.cs">
       <DependentUpon>ProfessorInterface.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -111,12 +112,12 @@
       <DependentUpon>ProfessorInterface.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentClassPage.aspx.cs">
-      <DependentUpon>StudentClassPage.aspx</DependentUpon>
+    <Compile Include="AdminInterface.aspx.cs">
+      <DependentUpon>AdminInterface.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="StudentClassPage.aspx.designer.cs">
-      <DependentUpon>StudentClassPage.aspx</DependentUpon>
+    <Compile Include="AdminInterface.aspx.designer.cs">
+      <DependentUpon>AdminInterface.aspx</DependentUpon>
     </Compile>
     <Compile Include="StudentInterface.aspx.cs">
       <DependentUpon>StudentInterface.aspx</DependentUpon>
@@ -128,7 +129,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Fonts\Walkway Black.ttf" />
-    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -162,13 +162,6 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.2.6.1\build\Microsoft.Net.Compilers.props'))" />
-    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.8\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
