--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -8,10 +8,15 @@
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
+  
+    <httpErrors errorMode="Detailed"></httpErrors>
+    
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <customErrors mode="Off" />
   </system.web>
+  
   
   <connectionStrings>
     <add name="CS" connectionString="Server=tcp:speakstatserver.database.windows.net,1433;Initial Catalog=Speakstatdata;Persist Security Info=False;User ID=speakstatgms;Password=Password123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
