--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -17,6 +17,12 @@
     <customErrors mode="Off" />
   </system.web>
   
+  <security>
+<ipSecurity allowUnlisted="false">
+<clear />
+<add ipAddress="192.168.250.70" allowed="true" />
+</ipSecurity >
+</security>
   
   <connectionStrings>
     <add name="CS" connectionString="Server=tcp:speakstatserver.database.windows.net,1433;Initial Catalog=Speakstatdata;Persist Security Info=False;User ID=speakstatgms;Password=Password123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
