--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -9,7 +9,11 @@
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
   </appSettings>
   
-    <httpErrors errorMode="Detailed"></httpErrors>
+  <configuration>
+    <system.webServer>
+        <httpErrors errorMode="Detailed"></httpErrors>
+    </system.webServer>
+</configuration>
     
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
