--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -11,7 +11,14 @@
   
   <system.webServer>
         <httpErrors errorMode="Detailed"></httpErrors>
-    </system.webServer>
+        <defaultDocument enabled="true">
+          <files>
+            <clear />
+            <add value="index.aspx"/>
+          </files>
+        </defaultDocument>
+  
+  </system.webServer>
     
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
