Change requests addresed.

--- a/NET4Project/SpeakStat/SpeakStat.csproj
+++ b/NET4Project/SpeakStat/SpeakStat.csproj
@@ -70,6 +70,7 @@
     <Content Include="Images\btn6.png" />
     <Content Include="Images\btn7.png" />
     <Content Include="Images\btn8.png" />
+    <Content Include="Images\corgi.gif" />
     <Content Include="Images\Map.jpg" />
     <Content Include="Images\PARENT.png" />
     <Content Include="Images\STUDENT.png" />
