--- a/NET4Project/SpeakStat/Web.config
+++ b/NET4Project/SpeakStat/Web.config
@@ -27,7 +27,7 @@
   </system.web>
   
   <connectionStrings>
-    <add name="CS" connectionString="Data Source=LAPTOP-095JGQH5;Initial Catalog=SPKSTAT;Integrated Security=True"/>
+    <add name="CS" connectionString="Server=tcp:speakstatserver.database.windows.net,1433;Initial Catalog=Speakstatdata;Persist Security Info=False;User ID=speakstatgms;Password=Password123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"/>
   </connectionStrings>
 
 </configuration>
