--- a/NET4Project/SpeakStat/SpeakStat.csproj
+++ b/NET4Project/SpeakStat/SpeakStat.csproj
@@ -71,6 +71,7 @@
     <Content Include="Images\btn7.png" />
     <Content Include="Images\btn8.png" />
     <Content Include="Images\corgi.gif" />
+    <Content Include="Images\corgo.JPG" />
     <Content Include="Images\Map.jpg" />
     <Content Include="Images\PARENT.png" />
     <Content Include="Images\STUDENT.png" />
